<resources>
    <string name="app_name">First App :)</string>
    <string name="txtLabelNumber1">Write some number 1</string>
    <string name="txtLabelNumber2">write some number 2</string>
    <string name="txtBtn1">sumar</string>
    <string name="txtResultado">Resultado</string>
    <string name="strResultado">Resultado</string>
    <string name="strBtnCalcular">Calcular</string>
    <string name="strRadioDiv">Division</string>
    <string name="strRadioButMult">Multiplicacion</string>
    <string name="strRadioResta">Resta</string>
    <string name="strRadioSuma">Suma</string>
    <string name="strCheckSuma">Suma</string>
    <string name="strCheckResta">Resta</string>
    <string name="strCheckMult">Mult</string>
    <string name="strBtnOperar">Button</string>
    <string name="strTextRestultado">Resultado</string>
    <string name="strTextResult">TextView</string>
    <string name="strAboutButton">About</string>
    <string name="strTextViewAboutActivity">Andrea Vicente</string>
    <string name="strBackButtonAboutActivity">back</string>
    <string name="ingrese_una_pagina">Ingrese una pagina</string>
    <string name="name">Name</string>
    <string name="find_web_page">find web page</string>
    <string name="out">out</string>
    <string name="hola">Hola</string>
</resources>